# quantops

./: package.json  readme.md
.github/workflows/: main.yml
javascript/: .gitignore  .npmignore  package.json  tsconfig.json
javascript/src/: data.ts  index.ts  registry.ts
python/: .gitignore  package.json  pyproject.toml
python/quantops/: __main__.py  core.py  generate.py  generate_types.py  loader.py  parser.py  registry.toml  util.py
quantops/: __init__.py  __main__.py  core.py  parser.py  registry.toml  registry.txt
