[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantops"
version = "0.1.0"

description = "Tools to define, manipulate and format physical quantities"
readme = "readme.md"
license = { text = "EUPL-1.2" }
requires-python = ">=3.11"

dependencies = [
  "snaptext~=0.1.0"
]

[project.urls]
repository = "https://github.com/slietar/quantops"

[tool.setuptools.packages.find]
include = ["quantops"]

[tool.setuptools.package-data]
"quantops" = ["registry.toml"]
